My javascript shopping-cart

--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
 
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="text" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button onclick="handlerProductChange('phone', false)" class="btn btn-default"><i
+                                 class="fas fa-minus"></i></button>
+                           <input id="phoneCount" type="text" class="form-control text-center" value="0">
+                           <button onclick="handlerProductChange('phone', true)" class="btn btn-default"><i
+                                 class="fas fa-plus"></i></button>
                         </div>
-                        <h5>$1219</h5>
+                        <h5>$ <span id="phoneTotal"> 1219</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -43,12 +45,14 @@
                      </div>
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="text" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button class="btn btn-default" onclick="handlerProductChange('case', false)"><i
+                                 class="fas fa-minus"></i></button>
+                           <input id="caseCount" type="text" class="form-control text-center" value="0">
+                           <button class="btn btn-default" onclick="handlerProductChange('case', true)"><i
+                                 class="fas fa-plus"></i></button>
 
                         </div>
-                        <h5>$59</h5>
+                        <h5> $<span id="caseTotal"> 59</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -64,9 +68,9 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$1,278</h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5 id="subtotal">$00</h5>
+                        <h5 id="tax-amount">$00</h5>
+                        <h5 id="grandTotal">$00</h5>
                      </div>
                   </div>
                </div>
@@ -77,6 +81,94 @@
          </div>
       </div>
    </section>
+   <script>
+      function handlerProductChange(product, isIncrease) {
+         const productNumber = getInputValue(product);
+         let productNewNumber = productNumber;
+         if (isIncrease == true) {
+            productNewNumber = productNumber + 1;
+         }
+         if (isIncrease == false && productNumber > 0) {
+            productNewNumber = productNumber - 1;
+         }
+         document.getElementById(product + "Count").value = productNewNumber;
+         let productTotal = 0;
+         if (product == "phone") {
+            productTotal = productNewNumber * 1219;
+         }
+         if (product == "case") {
+            productTotal = productNewNumber * 59;
+         }
+         document.getElementById(product + "Total").innerText = productTotal;
+         calculateTotal();
+      }
+      
+      function calculateTotal() {
+         const phoneNumber = getInputValue("phone");
+         const caseNumber = getInputValue("case");
+
+         const subTotal = phoneNumber * 1219 + caseNumber * 59;
+         document.getElementById("subtotal").innerText = subTotal;
+
+         const tax = Math.round(subTotal * 0.1);
+         document.getElementById("tax-amount").innerText = "$" + tax;
+
+         const grandTotal = subTotal + tax;
+         document.getElementById("grandTotal").innerText = "$" + grandTotal;
+      }
+      
+      function getInputValue(product) {
+         const productInput = document.getElementById(product + "Count");
+         const productNumber = parseInt(productInput.value);
+         return productNumber;
+      }
+
+
+      // function handlerProductChange(isIncrease) {
+      //    const caseInput = document.getElementById("caseCount");
+      //    const caseNumber = parseInt(caseInput.value);
+      //    let caseNewNumber = caseNumber;
+      //    if (isIncrease == true) {
+      //       caseNewNumber = caseNumber + 1;
+      //    }
+      //    if (isIncrease == false && caseNumber > 0) {
+      //       caseNewNumber = caseNumber - 1;
+      //    }
+      //    caseInput.value = caseNewNumber;
+      //    const caseTotal = caseNewNumber * 59
+      //    document.getElementById("caseTotal").innerText = caseTotal
+      // }
+
+      // document.getElementById("phoneIncrease").addEventListener("click", function () {
+      //    const phoneInput = document.getElementById("phoneCount");
+      //    const phoneNumber = parseInt(phoneInput.value);
+      //    const phoneNewNumber = phoneNumber + 1;
+      //    phoneInput.value = phoneNewNumber;
+      //    const phoneTotal = phoneNewNumber * 1219
+      //    document.getElementById("phoneTotal").innerText = phoneTotal
+      // })
+
+
+      // document.getElementById("phoneDecrease").addEventListener("click", function () {
+      //    const phoneInput = document.getElementById("phoneCount");
+      //    const phoneNumber = parseInt(phoneInput.value);
+      //    const phoneNewNumber = phoneNumber - 1;
+      //    phoneInput.value = phoneNewNumber;
+      //    const phoneTotal = phoneNewNumber * 1219;
+      //    document.getElementById("phoneTotal").innerText = phoneTotal;
+      // })
+
+      // function calculateTotal() {
+      //    const phoneInput = document.getElementById("phoneCount");
+      //    const phoneNumber = parseInt(phoneInput.value);
+
+      //    const caseInput = document.getElementById("caseCount");
+      //    const caseNumber = parseInt(caseInput.value);
+
+      //    const subTotal = phoneNumber * 1219 + caseNumber * 59;
+      //    document.getElementById("subtotal").innerText = subTotal;
+      // }
+   </script>
 </body>
 
 </html>
